--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,3 +6,4 @@
 1.1.1 fix stringify having #29 , pr: #28
 1.2.0 fix typo "refrence" to "reference" #24
 1.2.1 fix stringify having #29 , pr: #28
+1.2.2 feat: add support for "`" quoted alias, pr: #33
